--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <!-- Header__top -->
       <div class="header__top">
         <div class="header__logo">
-          <a class="header__logo-link" href="/">
+          <a class="header__logo-link" href="#!">
             <img class="header__logo-pic" src="img/svg/logo.svg" alt="logo">
           </a>
         </div>
